Update publications etc.

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,27 @@ main:
   - name: Bio
     url: /
     weight: 10
-  - name: Papers
+  - name: Publications
     url: /#papers
     weight: 11
   - name: Talks
     url: /#talks
     weight: 12
-  - name: News
-    url: /#news
+  - name: Posters
+    url: /#posters
     weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
-  - name: Projects
-    url: projects/
+  # - name: News
+  #   url: /#news
+  #   weight: 13
+  # - name: Experience
+  #   url: experience/
+  #   weight: 20
+  # - name: Projects
+  #   url: projects/
+  #   weight: 30
+  - name: Events
+    url: /#events
     weight: 30
   - name: Teaching
-    url: teaching/
+    url: /#teaching
     weight: 40
