--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,12 +35,12 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Sebastian Litzinger"
 
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Sebastian Litzinger. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
